k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: poc-blazor
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: ghcr.io/mushroomsoft-it/poc-blazor-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
