k8s/api-rewrite-placehoder-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-rewrite
  namespace: poc-blazor
spec:
  type: ClusterIP
  ports:
    - name: use-annotation
      port: 80
      targetPort: 80
