k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: poc-blazor
spec:
  type: ClusterIP
  selector:
    app: api-service
  ports:
    - port: 8080
      targetPort: 8080
